# 4Charm

./: .gitignore  00-UI-REVIEW.md  4Charm  4Charm Info.txt  4Charm.dmg  4Charm.progress.md  4Charm.spec  AGENTS.md  BUILD.md  BUILD_AND_RELEASE.md  BUILD_CHANGES_CHECKLIST.txt  Build Checklist.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DMG_BUILD_README.md  How To Build.txt  README  README.md  SECURITY.md  SECURITY_OWNERSHIP.md  SUGGESTIONS.md  TYPE_SAFETY_NOTES.md  VERSION_NOTES.md  WARP.md  build-dmg.sh  build.py  build.sh  design-qa.md  dmg-config.json  increment_version.py  main.py  main.py.old  manage_version_tracking.sh  pyproject.toml  release.sh  requirements.txt  run_preview.sh  setup.py  verify_paste.py
.agent/workflows/: versioning.md
.codex/environments/: environment.toml
.cursor/hooks/state/: continual-learning.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-version.yml  ci.yml  pylint.yml
.windsurf/: rules.json
assets/: 4Charm.icns  dmg-layout.json
assets/icons/: 4Charm.icns
docs/: BUILD.md  CHANGELOG.md  DMG_BUILD_README.md  SYNC_LOGIC.md
docs/adr/: 0001-board-api-seam.md  0002-downloadtask-progress-schema.md
docs/superpowers/plans/: 2026-06-14-four-slot-url-editor.md  2026-06-14-premium-ui-redesign.md
docs/superpowers/specs/: 2026-06-14-four-slot-url-editor-design.md  2026-06-14-premium-ui-redesign-design.md
four_charm/: __init__.py  main.py
resources/: 4Charm.icns
scripts/: increment_version.py
src/: __init__.py  config.py  main.py
src/core/: __init__.py  models.py  scraper.py
src/four_charm/: __init__.py  config.py  main.py
src/four_charm/core/: __init__.py  bandwidth.py  chunking.py  dedup.py  error_format.py  models.py  paths.py  retry.py  scraper.py  signals.py  urls.py
src/four_charm/gui/: __init__.py  main_window.py  style.qss  widgets.py  workers.py
src/four_charm/transport/: api.py  session.py
src/four_charm/utils/: __init__.py  logging_setup.py
src/ui/: __init__.py  main_window.py  workers.py
src/utils/: __init__.py  logging_setup.py
tests/: conftest.py  test_bandwidth_monitor.py  test_cancel_reset.py  test_clipboard_paste.py  test_error_format.py  test_gui.py  test_md5_verification.py  test_paths.py  test_retry_logic.py  test_scraper_logic.py  test_scraper_utils.py  test_session.py  test_signals.py  test_smoke.py  test_transport_api.py  test_urls.py  test_workers.py
