# ============================================================================
# 4CHARM - DESKTOP APPLICATION
# ============================================================================
# This pyproject.toml follows RazorBackRoar workspace standards
# Last Updated: 2026-01-28
# Python Version: 3.13.x (STRICT LOCK - never upgrade to 3.14+)
# ============================================================================

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["four_charm*"]

[project]
name = "four-charm"
version = "4.11.6"
description = "4Charm desktop app for bulk 4chan media downloads"
requires-python = "==3.13.*"
# WHY: Python 3.13.x is locked per IDE_CONTEXT.md requirements

dependencies = [
    "PySide6>=6.6.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "certifi>=2023.7.22",
    "chardet>=5.0.0",
    "html5lib>=1.1",
    "razorcore",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["four_charm"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ty.src]
exclude = [
    ".agent/**",
    ".shared/**",
]

[tool.ty.environment]
extra-paths = [
    "src",
    "/Users/home/Library/Python/3.13/lib/python/site-packages",
    "/opt/homebrew/lib/python3.13/site-packages",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "ty>=0.0.20",
]

[tool.uv.sources]
razorcore = { path = "../.razorcore", editable = true }
