# ============================================================================
# 4CHARM - DESKTOP APPLICATION
# ============================================================================
# This pyproject.toml follows RazorBackRoar workspace standards
# Last Updated: 2026-01-28
# Python Version: 3.14 primary (best-effort source compatibility 3.14)
# ============================================================================

[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["four_charm*"]

[project]
name = "four-charm"
version = "2.0.0"
description = "4Charm desktop app for bulk 4chan media downloads"
requires-python = "==3.14.*"
# WHY: Native dev/build target is 3.14, with source compatibility for 3.14.

dependencies = [
    "PySide6>=6.6.0,<7.0.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "certifi>=2026.6.17",
    "chardet>=5.0.0",
    "html5lib>=1.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["four_charm"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ty.src]
exclude = [
    ".agent/**",
    ".shared/**",
]

[tool.ty.environment]
extra-paths = [
    "src",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.4",
    "ty>=0.0.56",
]
